examples/compiler_errors/row_effects/missing_ambient_effect_deterministic_e400.flx
fn call_requires_io_time(f: (() -> Int with Time, IO)) -> Int with Time, IO {
    f()
}

fn worker() -> Int with IO, Time {
    print("worker")
    now_ms()
}

fn caller() -> Int {
    call_requires_io_time(worker)
}

fn main() -> Unit {
    caller()
    None
}
